# android

./: .gitignore  AndroidManifest.xml  README.md  copy  develop.txt  native  refresh.sh  run
android.xcodeproj/: project.pbxproj
ant/: AndroidManifest.xml  README.md  ant.properties  copy  develop.txt  native
ant/jni/: bibleditjni.c
ant/res/layout/: main.xml
ant/src/org/bibledit/android/: MainActivity.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bibleditjni.cpp  config.h
app/src/main/res/layout/: activity_main.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 142.txt  145.txt
fdroid/: org.bibledit.android.yml  steps.txt
gradle/: .gitignore  build.gradle  gradle.properties  gradlew.bat  local.properties  refresh.sh
gradle/app/: .gitignore  build.gradle
gradle/app/release/: output-metadata.json
gradle/app/src/androidTest/java/org/bibledit/android/: ExampleInstrumentedTest.java
gradle/app/src/main/: AndroidManifest.xml
gradle/app/src/main/assets/: asset.external
gradle/app/src/main/cpp/: CMakeLists.txt  bibleditjni.cpp  config.h  config.h.  native-lib.cpp  native.cpp  stub.cpp  stub.h
gradle/app/src/main/cpp/config/: config.h  config.h.  logic.cpp
gradle/app/src/main/cpp/css/: stylesheet.css
gradle/app/src/main/cpp/database/: sqlite.cpp
gradle/app/src/main/cpp/filter/: memory.cpp
gradle/app/src/main/cpp/html/: header.cpp
gradle/app/src/main/cpp/pkgdata/: files.txt
gradle/app/src/main/cpp/stylesv2/: logic.cpp  logic.h
gradle/app/src/main/java/org/bibledit/android/: MainActivity.java
gradle/app/src/main/res/values/: strings.xml  styles.xml
gradle/app/src/test/java/org/bibledit/android/: ExampleUnitTest.java
gradle/fastlane/: Appfile
gradle/gradle/wrapper/: gradle-wrapper.properties
jni/: bibleditjni.c
src/org/bibledit/android/: MainActivity.java
